test/tests/compiler/18_structures/invalid_parse/plx1_struct_member_none_pointer_1.plx
type struc s1(x: *none)

pub fn main(none) i32 {
    return 0
}
